--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Deploy to GCS
         run: |
-          gsutil cp -r ./frontend-dist/* gs://frontend-bucket-ccc-2023-group/
+          gsutil cp -r ./frontend-dist/gs://frontend-bucket-ccc-2023-group/
         working-directory: ./frontend
 
       - name: Clean Up
