--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Deploy to GCS
         run: |
-          gsutil cp -r /frontend/* gs://frontend-bucket-ccc-2023-group/
-        working-directory: /frontend
+          gsutil cp -r ./frontend/* gs://frontend-bucket-ccc-2023-group/
+        working-directory: ./frontend
 
       - name: Clean Up
         run: |
