--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Deploy to GCS
         run: |
           gsutil cp -r ./* gs://frontend-bucket-ccc-2023-group/
-        working-directory: /frontend
+        working-directory: ./
 
       - name: Clean Up
         run: |
