--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -26,5 +26,5 @@ jobs:
 
       - name: Clean Up
         run: |
-          gcloud auth revoke
-        if: always()
+          gsutil cp -r ./* gs://frontend-bucket-ccc-2023-group
+        working-directory: ./
