--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Authenticate with Goggle Cloud
         uses: google-github-actions/auth@v1
         with:
-          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_FRONTEND_KEY }}
+          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_FRONTEND_KEY }}
           project_id: cloud-temp-400907
 
       - name: Deploy to GCS
