--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -18,6 +18,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: build frontend
+        uses: actions/setup-node@v3
+
+      - run: |
+          npm run build
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.5.0
@@ -30,9 +35,4 @@ jobs:
       - name: Deploy to GCS
         run: |
           gsutil cp -r ./* gs://frontend-bucket-ccc-2023-group
-        working-directory: ./
-
-      - name: Clean Up
-        run: |
-          gsutil cp -r ./* gs://frontend-bucket-ccc-2023-group
-        working-directory: ./
+        working-directory: ./dist
