--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/setup-node@v3
 
       - run: |
+          npm install
           npm run build
 
       - name: Set up Google Cloud SDK
