--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - run: |
+          echo "${{ secrets.BACKEND_IP }}" > .env
+
       - name: build frontend
         uses: actions/setup-node@v3
 
