--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -21,12 +21,13 @@ jobs:
 
       - name: build frontend
         uses: actions/setup-node@v3
-
-      - name: 'Create env file'
-        run: |
-          touch .env
-          echo API_KEY=${{ secrets.BACKEND_IP }} >> .env
-          cat .env
+        
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1
+        with:
+          envkey_DEBUG: false
+          envkey_BACKEND_URL: ${{ secrets.BACKEND_IP }}
+          file_name: .env
 
       - run: |
           npm install
@@ -43,7 +44,4 @@ jobs:
       - name: Deploy to GCS
         run: |
           gsutil cp -r ./* gs://cb-website
-          touch .env
-          echo API_KEY=${{ secrets.BACKEND_IP }} >> .env
-          cat .env
         working-directory: ./dist
