--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -25,7 +25,7 @@ jobs:
           npm run build
       - name: 'Create env file'
         run: |
-          cd /
+          cd /src
           touch .env
           echo test >> .env
           cat .env
