--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -22,7 +22,7 @@ jobs:
 
       - run: |
           touch .env
-          echo BACKEND_URL=${{BACKEND_IP}} >> .env
+          echo BACKEND_URL=${{secrets.BACKEND_IP}} >> .env
           cat .env
           npm install
           npm run build
