--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -20,6 +20,9 @@ jobs:
       - name: build frontend
         uses: actions/setup-node@v3
 
+      - env:
+          BACKEND_URL: ${{secrets.BACKEND_URL}}
+          
       - run: |
           touch test
           npm install
