--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/setup-node@v3
           
       - run: |
+          touch .env
           npm install
           touch config.yml
           echo "backend_ip: ${{ secrets.BACKEND_IP }}" > config.yml
