--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -24,7 +24,8 @@ jobs:
           touch .env
           npm install
           touch config.yml
-          echo "backend_ip: ${{ secrets.BACKEND_IP }}" > config.yml
+          echo "backend_ip: 
+            - ${{ secrets.BACKEND_IP }}" > config.yml
           npm run build
           ls
 
