--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -32,11 +32,12 @@ jobs:
           service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_FRONTEND_KEY }}
           export_default_credentials: true
 
-      - name: Create .env file
-        run: | 
-          echo "GOOGLE_CLOUD_BUCKET_NAME=my-bucket-name" > .env
-          ls
-
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v2.0
+        with:
+          envkey_DEBUG: false
+          envkey_SOME_API_KEY: "123456abcdef"
+        
       - name: Deploy to GCS
         run: |
           gsutil cp -r ./* gs://cb-website
