--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -4,8 +4,7 @@ on:
   push:
     branches:
       - main
-env:
-    BACKEND_URL: ${{secrets.BACKEND_IP}}  
+
 jobs:
   deploy:
     permissions:
@@ -13,19 +12,21 @@ jobs:
       id-token: 'write'
 
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: build frontend
+      - name: Setup Nodew
         uses: actions/setup-node@v3
-          
-      - run: |
-          npm install
-          echo "VITE_BACKEND_URL=$BACKEND_URL" >> .env
+
+      - name: Build Frontend
+        env:
+          BACKEND_URL: ${{secrets.BACKEND_IP}}
+        run: |
+          npm install --ci &&
+          echo "VITE_BACKEND_URL=$BACKEND_URL" >> .env &&
           npm run build
-          ls
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.5.0
@@ -34,7 +35,6 @@ jobs:
           service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_FRONTEND_KEY }}
           export_default_credentials: true
 
-        
       - name: Deploy to GCS
         run: |
           gsutil cp -r ./* gs://cb-website
